Cadastro de Specification e implementação do repositório de usuários
