# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi":"3.0.0",
     "info": {
-        "title":"RentalX Documentation",
+        "title":"RentX Documentation",
         "description":"this is API Rent",
         "version":"1.0.0",
         "contact":{
@@ -72,6 +72,133 @@
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import":{
+            
+            "post":{
+                "tags":["Category"],
+                "summary": "Upload a new category",
+                "description": "Upload a new category",
+                "requestBody":{
+                    "content":{
+                       "multipart/form-data" : {
+                            "schema" : {
+                                "type":"object",
+                                "properties":{
+                                    "file": {
+                                        "type":"string",
+                                        "format":"binary"
+                                    }
+                                }
+                            }
+                       }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description": "Created"
+                    },
+                    "500":{
+                        "description":"Category already exists"
+                    }
+                }
+            },
+            "get":{
+                "tags":["Category"],
+                "summary":"List all categories",
+                "description": "List all categories",
+                "responses":{
+                    "200":{
+                        "description":"Success",
+                        "content":{
+                            "application/json":{
+                                "schema":{
+                                    "type":"array",
+                                    "items":{
+                                        "type":"object",
+                                        "properties":{
+                                            "name":{
+                                                "type":"string"
+                                            },
+                                            "description":{
+                                                "type":"string"
+                                            }
+                                        }
+                                    }
+
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/specifications":{
+            
+            "post":{
+                "tags":["Specifications"],
+                "summary": "Create a specification",
+                "description": "Create a new specfication",
+                "requestBody":{
+                    "content":{
+                        "application/json":{
+                            "schema":{
+                                "$ref": "#/definations/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description": "Created"
+                    },
+                    "500":{
+                        "description":"Specification already exists"
+                    }
+                }
+            },
+            "get":{
+                "tags":["Specifications"],
+                "summary":"List all specifications",
+                "description": "List all specifications",
+                "responses":{
+                    "200":{
+                        "description":"Success",
+                        "content":{
+                            "application/json":{
+                                "schema":{
+                                    "type":"array",
+                                    "items":{
+                                        "type":"object",
+                                        "properties":{
+                                            "name":{
+                                                "type":"string"
+                                            },
+                                            "description":{
+                                                "type":"string"
+                                            }
+                                        }
+                                    }
+
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties":{
+                "name":{
+                    "type":"string"
+                },
+                "description": {
+                    "type":"string"
                 }
             }
         }
